--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   width: 200px;
   background-color: #ffffff;
   color: #262626;
-  border: 2px solid #B3842D;
+  border: 2px solid #F2BC18;
   padding: 20px 0;
   font-weight: 600;
   font-size: 20px;
@@ -85,7 +85,7 @@ body {
 }
 
 .btn-banner:hover {
-  background-color: #B3842D;
+  background-color: #F2BC18;
 }
 
 .contactanos{
@@ -126,7 +126,7 @@ body {
 
 .btn-cotiza{
   color: #262626;
-  border: 2px solid #B3842D;
+  border: 2px solid #F2BC18;
   width: 300px;
   padding: 20px 0;
   font-size: 16px;
@@ -139,7 +139,7 @@ body {
 }
 
 .btn-cotiza:hover{
-  background-color: #B3842D;
+  background-color: #F2BC18;
 }
 
 /* ========================= MOBILE ========================= */
